--- a/TODO
+++ b/TODO
@@ -237,7 +237,7 @@ encryption IND-CPA + INT_CTXT [done]
 encryption IND-CPA + INT_CTXT + nonce [done, to test]
 AEAD [done]
 AEAD + nonce [done]
-redo all the above with IND$-CPA: [done, to test and document]
+redo all the above with IND$-CPA: [done, to test]
 encryption IND$-CPA 
 encryption IND$-CPA + nonce
 encryption IND$-CPA + INT_CTXT
